--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -6,9 +6,19 @@
 .pnp.js
 .yarn/install-state.gz
 
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
 # production
 /build
 
+# misc
+.DS_Store
+*.pem
 
 # debug
 npm-debug.log*
@@ -19,3 +29,9 @@ yarn-error.log*
 .env*.local
 .env
 
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
