--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,11 @@
 # Database configuration
-# DATABASE_URL = mongodb://localhost:27017    // local database
-DATABASE_URL =
+
+DATABASE_URL ="mongodb://localhost:27017"
 DB_NAME = 
-# DB_USER = yourDatabaseUser
-# DB_PASS = yourDatabasePassword
+DB_USER = 
+DB_PASS = 
+
+# API URL
 REACT_APP_API_URL=
 
 # Server configuration
