--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.12",
     "yup": "^1.4.0"
