--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,15 @@
+# In server/Dockerfile
 FROM node:18-alpine
 
-WORKDIR /next-project
+WORKDIR /app
 
-COPY package.json package-lock.json ./
+COPY package.json ./
+COPY package-lock.json ./
+
 RUN npm install
 
 COPY . .
 
 EXPOSE 5000
 
-CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
