--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,12 +1,23 @@
-FROM node:18-alpine
+# In client/Dockerfile
+FROM node:18-alpine AS builder
 
-WORKDIR /next-project
+WORKDIR /app
 
-COPY package.json package-lock.json ./
+COPY package.json ./
+COPY package-lock.json ./
+
 RUN npm install
 
 COPY . .
 
-EXPOSE 5000
+RUN npm run build
 
-CMD ["npm", "run", "dev"]
+# Serve with Nginx
+FROM nginx:alpine
+
+COPY --from=builder /app/out /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 3000
+
+CMD ["nginx", "-g", "daemon off;"]
