--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,23 +1,40 @@
-# In client/Dockerfile
-FROM node:18-alpine AS builder
+# # In client/Dockerfile
+# FROM node:18-alpine AS builder
+
+# WORKDIR /app
+
+# COPY package.json ./
+# COPY package-lock.json ./
+
+# RUN npm install
+
+# COPY . .
+
+# RUN npm run build
+
+# # Serve with Nginx
+# FROM nginx:alpine
+
+# COPY --from=builder /app/out /usr/share/nginx/html
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# EXPOSE 3000
+
+# CMD ["nginx", "-g", "daemon off;"]
+
+# Client Dockerfile
+FROM node:14
 
 WORKDIR /app
 
 COPY package.json ./
-COPY package-lock.json ./
-
 RUN npm install
 
 COPY . .
 
 RUN npm run build
 
-# Serve with Nginx
-FROM nginx:alpine
-
-COPY --from=builder /app/out /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
 EXPOSE 3000
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "run", "start"]
+
