--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,15 +1,30 @@
-# In server/Dockerfile
-FROM node:18-alpine
+# # In server/Dockerfile
+# FROM node:18-alpine
+
+# WORKDIR /app
+
+# COPY package.json ./
+# COPY package-lock.json ./
+
+# RUN npm install
+
+# COPY . .
+
+# EXPOSE 5000
+
+# CMD ["npm", "start"]
+
+
+# Server Dockerfile
+FROM node:14
 
 WORKDIR /app
 
 COPY package.json ./
-COPY package-lock.json ./
-
 RUN npm install
 
 COPY . .
 
 EXPOSE 5000
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
