Add social Auth 🔒

--- a/server/.env.example
+++ b/server/.env.example
@@ -20,7 +20,6 @@ FRONTEND_EMAIL_LINK = "http://localhost:3000"
 SALT = 
 PEPPER = 
 
-
 # JWT Secret
 JWT_ACCESS_KEY = 
 JWT_REFRESH_KEY = 
@@ -32,3 +31,16 @@ EMAIL_USER=
 EMAIL_PASSWORD=
 EMAIL_FROM=
 EMAIL_REPLY_TO=
+
+
+# API Keys and Secrets for Google
+GOOGLE_CLIENT_ID =
+GOOGLE_CLIENT_SECRET =
+
+# API Keys and Secrets for Facebook
+FACEBOOK_CLIENT_ID =
+FACEBOOK_CLIENT_SECRET =
+
+# API Keys and Secrets for Github
+GITHUB_CLIENT_ID =
+GITHUB_CLIENT_SECRET =
