--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "next": "^14.2.5",
-    "node-mailjet": "^6.0.5",
+    "node-mailjet": "^6.0.4",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1"
   }
 }
