--- a/server/.env.example
+++ b/server/.env.example
@@ -13,8 +13,9 @@ PORT = 5000
 # HOST = 0.0.0.0
 
 # Frontend Server configuration 
-FRONTEND_HOST = "http://localhost:3000"
-FRONTEND_EMAIL_LINK = "http://localhost:3000"
+FRONTEND_HOST_PRODUCTION=
+FRONTEND_HOST_DEVELOPMENT=
+
 
 # pepper Secret for Password
 SALT = 
